# NSE_pulse

./: .env  docker-compose.yaml  dockerfile  dockerfile.dbt  main.py  portfolio_data.parquet  pyproject.toml  requirements.txt
dags/: nse_pipleine.py
dbt_project/NSE_pulse_dbt/: dbt_project.yml
dbt_project/NSE_pulse_dbt/models/staging/: sources.yml  stg_ohlcv.sql
scripts/: ingest.py  load_clickhouse.py  portfolio_data.parquet  upload_minio.py
